# circuit-breaker

./: Cargo.toml  Readme.md
examples/: simple.rs
src/: error.rs  lib.rs  state.rs  threshold.rs
