[package]
name = "circuit-breaker"
version = "0.1.0"
authors = ["Dr. Ralf Berger <dr.ralf.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.8"
